test/error/sema/enum-call-as-function.dsk
enum S
    A
    B
end

echo(S())
